@@ -9838,14 +9838,19 @@ block|{
 name|String
 name|dst
 init|=
+operator|new
+name|File
+argument_list|(
 name|TEST_ROOT_DIR
-operator|+
-literal|"/"
-operator|+
+argument_list|,
 name|fname
 operator|+
 operator|++
 name|count
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
 decl_stmt|;
 name|String
 index|[]
